--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "vite": "^5.4.19"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.8",
-    "@rollup/rollup-linux-x64-gnu": "^4.44.2"
+    "@rollup/rollup-linux-x64-gnu": "^4.44.2",
+    "bufferutil": "^4.0.8"
   }
 }
